--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "9.75.0",
+    "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "8.13.3",
     "@types/three": "0.152.1",
+    "playroomkit": "^0.0.67",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "0.153.0"
