--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "playroomkit": "^0.0.67",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "0.153.0"
+    "three": "0.153.0",
+    "three-stdlib": "^2.29.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
