--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "8.13.3",
+    "@react-three/rapier": "^1.3.0",
     "@types/three": "0.152.1",
     "playroomkit": "^0.0.67",
     "react": "^18.2.0",
